--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
+    "cross-fetch": "^3.1.6",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
-    "mongodb": "^5.6.0"
+    "mongodb": "^5.6.0",
+    "node-fetch": "^3.3.1"
   }
 }
