--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cross-fetch": "^3.1.6",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
