--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "express": "^4.18.2",
     "http": "^0.0.1-security",
     "mongodb": "^5.6.0",
-    "node-fetch": "^3.3.1"
+    "node-fetch": "^3.3.1",
+    "ws": "^8.13.0"
   }
 }
